Move the Enroll Applications section
We are organizing the docs so that top-level sections correspond to
Teleport products. Move the Enroll Applications section into Zero Trust
Access, since the application protection functionality belongs to the
ZTA product.

--- a/docs/pages/core-concepts.mdx
+++ b/docs/pages/core-concepts.mdx
@@ -84,7 +84,7 @@ Proxies HTTP and TCP traffic to user-configured endpoints, e.g., internal web
 applications or the AWS Console. Protect your internal tools and dashboards.
 
 Read more about the [Teleport Application
-Service](./enroll-resources/application-access/introduction.mdx).
+Service](zero-trust-access/enroll-resources/application-access/introduction.mdx).
 
 ### Teleport Database Service
 
