--- a/docs/pages/enroll-resources/agents/kubernetes.mdx
+++ b/docs/pages/enroll-resources/agents/kubernetes.mdx
@@ -246,6 +246,6 @@ namespace "teleport-agent" deleted
 {/* vale messaging.protocol-products = NO */}
 - The possible values for `teleport-kube-agent` chart are documented
   [in its reference](../../reference/helm-reference/teleport-kube-agent.mdx).
-- See [Application Access Guides](../application-access/guides/guides.mdx)
+- See [Application Access Guides](../../zero-trust-access/enroll-resources/application-access/guides/guides.mdx)
 - See [Database Access Guides](../database-access/guides/guides.mdx)
 {/* vale messaging.protocol-products = YES */}
