--- a/docs/pages/enroll-resources/database-access/enroll-aws-databases/aws-opensearch.mdx
+++ b/docs/pages/enroll-resources/database-access/enroll-aws-databases/aws-opensearch.mdx
@@ -55,7 +55,7 @@ access conventions. You should adjust the AWS IAM permissions to fit your needs.
 <Admonition type="tip" title="Dashboard in private network">
 To access the OpenSearch Dashboard deployed within private VPC subnets using
 Teleport, you can enroll the Dashboard as a [Web
-application](../../application-access/guides/connecting-apps.mdx)
+application](../../../zero-trust-access/enroll-resources/application-access/guides/connecting-apps.mdx)
 in Teleport.
 </Admonition>
 
