--- a/docs/pages/zero-trust-access/enroll-resources/application-access/cloud-apis/azure.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/application-access/cloud-apis/azure.mdx
@@ -81,7 +81,7 @@ your VM belongs to.
 In the **Name** field, enter `teleport-azure`.
 
 ![Creating an Azure managed
-identity](../../../../img/application-access/azure/create-identity.png)
+identity](../../../../../img/application-access/azure/create-identity.png)
 
 Click **Review + create**, then **Create**.
 
@@ -110,7 +110,7 @@ Within the **Add role assignment** screen, click **Reader**, a built-in role
 with view-only access to resources. 
 
 ![Add a role
-assignment](../../../../img/application-access/azure/add-role-assignment.png)
+assignment](../../../../../img/application-access/azure/add-role-assignment.png)
 
 Scroll to the bottom of the screen and click **Next**.
 
@@ -122,7 +122,7 @@ On the right sidebar, find the **Managed identity** dropdown menu and select
 created earlier. 
 
 ![Select managed
-identities](../../../../img/application-access/azure/select-managed-identities.png)
+identities](../../../../../img/application-access/azure/select-managed-identities.png)
 
 Click **Select**, then **Review + assign**.
 
@@ -148,13 +148,13 @@ On the right side panel, click the **Identity** tab, then within the
 the `teleport-azure` identity. Click **Add**.
 
 ![Add an identity to a
-VM](../../../../img/application-access/azure/vm-identity.png)
+VM](../../../../../img/application-access/azure/vm-identity.png)
 
 Navigate back to **Identity** tab in the page for your Azure VM. You should see
 the new identity listed in the **User assigned** sub-tab:
 
 ![Verifying that you added the
-identity](../../../../img/application-access/azure/verify-id.png)
+identity](../../../../../img/application-access/azure/verify-id.png)
 
 ## Step 2/4. Deploy the Teleport Application Service
 
@@ -226,8 +226,8 @@ Application Service host.
   your Teleport users can only manage Azure resources temporarily, with no
   longstanding admin roles for attackers to hijack. View our documentation on
   [Role Access
-  Requests](../../../identity-governance/access-requests/role-requests.mdx) and
-  [Access Request plugins](../../../identity-governance/access-request-plugins/access-request-plugins.mdx).
+  Requests](../../../../identity-governance/access-requests/role-requests.mdx) and
+  [Access Request plugins](../../../../identity-governance/access-request-plugins/access-request-plugins.mdx).
 - Consult the Azure documentation for information about [Azure managed
   identities](https://learn.microsoft.com/en-us/azure/active-directory/managed-identities-azure-resources/overview)
   and how to [manage user-assigned managed
@@ -238,5 +238,5 @@ Application Service host.
 - For full details on how Teleport populates the `internal` and `external`
   traits we illustrated in the Teleport roles within this guide, see
   the [Access Controls
-  Reference](../../../reference/access-controls/roles.mdx).
+  Reference](../../../../reference/access-controls/roles.mdx).
 
