--- a/docs/pages/zero-trust-access/enroll-resources/application-access/cloud-apis/google-cloud.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/application-access/cloud-apis/google-cloud.mdx
@@ -646,8 +646,8 @@ command.
   ensure that your Teleport users can only manage Google Cloud resources
   temporarily, with no longstanding admin roles for attackers to hijack. View
   our documentation on [Role Access
-  Requests](../../../identity-governance/access-requests/role-requests.mdx) and [Access
-  Request plugins](../../../identity-governance/access-request-plugins/access-request-plugins.mdx).
+  Requests](../../../../identity-governance/access-requests/role-requests.mdx) and [Access
+  Request plugins](../../../../identity-governance/access-request-plugins/access-request-plugins.mdx).
 - You can proxy any `gcloud` or `gsutil` command via Teleport. For a full
   reference of commands, view the Google Cloud documentation for
   [`gcloud`](https://cloud.google.com/sdk/gcloud/reference) and
@@ -655,5 +655,5 @@ command.
 - For full details on how Teleport populates the `internal` and `external`
   traits we illustrated in the Teleport roles within this guide, see
   the [Access Controls
-  Reference](../../../reference/access-controls/roles.mdx).
+  Reference](../../../../reference/access-controls/roles.mdx).
 
