--- a/docs/pages/zero-trust-access/enroll-resources/application-access/getting-started.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/application-access/getting-started.mdx
@@ -141,7 +141,7 @@ $ helm install example-grafana grafana/grafana \
 
 <Tabs>
 <TabItem label="Docker">
-Select a Teleport edition, then follow the [Installation](../../installation/installation.mdx) instructions 
+Select a Teleport edition, then follow the [Installation](../../../installation/installation.mdx) instructions 
 for your environment.
 
 To install on Linux:
@@ -244,5 +244,5 @@ Learn more about protecting applications with Teleport in the following topics:
 - [Connecting applications](./guides/connecting-apps.mdx).
 - Integrating with [JWT tokens](./jwt/introduction.mdx).
 - Accessing applications with [RESTful APIs](./guides/api-access.mdx).
-- Setting configuration options AND running CLI commands in the [Application Service reference](../../reference/agent-services/application-access.mdx).
+- Setting configuration options AND running CLI commands in the [Application Service reference](../../../reference/agent-services/application-access.mdx).
 - Using the Let's Encrypt [ACME protocol](https://letsencrypt.org/how-it-works/).
