--- a/docs/pages/zero-trust-access/enroll-resources/application-access/guides/tcp.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/application-access/guides/tcp.mdx
@@ -187,7 +187,7 @@ app_service:
       end_port: 32300 # Inclusive end of range
 ```
 
-To access the app, [start VNet](../../../connect-your-client/vnet.mdx) and point an application
+To access the app, [start VNet](../../../../connect-your-client/vnet.mdx) and point an application
 client towards the target port:
 
 ```code
@@ -215,5 +215,5 @@ registration](./dynamic-registration.mdx) from an Auth Service.
 ### Further reading
 
 - Learn about [access controls](../controls.mdx) for applications.
-- Learn how to [connect to TCP apps with VNet](../../../connect-your-client/vnet.mdx) and
+- Learn how to [connect to TCP apps with VNet](../../../../connect-your-client/vnet.mdx) and
   [configure VNet for custom `public_addr`](vnet.mdx).
