--- a/docs/pages/zero-trust-access/infrastructure-as-code/terraform-starter/enroll-resources.mdx
+++ b/docs/pages/zero-trust-access/infrastructure-as-code/terraform-starter/enroll-resources.mdx
@@ -613,7 +613,7 @@ the documentation section for each kind of resource you would like to enroll:
   clusters](../../../enroll-resources/kubernetes-access/kubernetes-access.mdx)
 - [Linux servers](../../../enroll-resources/server-access/server-access.mdx)
 - [Web applications and cloud provider
-  APIs](../../../enroll-resources/application-access/application-access.mdx)
+  APIs](../../enroll-resources/application-access/application-access.mdx)
 
 Once you are familiar with the process of enrolling a resource manually, you can
 edit your Terraform module to:
