--- a/docs/pages/zero-trust-access/enroll-resources/application-access/controls.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/application-access/controls.mdx
@@ -135,19 +135,19 @@ for more information on enabling access to Azure managed identities.
 
 ## Next steps
 
-- View access controls [Getting Started](../../admin-guides/access-controls/getting-started.mdx)
-  and other available [guides](../../admin-guides/access-controls/guides/guides.mdx).
+- View access controls [Getting Started](../../../admin-guides/access-controls/getting-started.mdx)
+  and other available [guides](../../../admin-guides/access-controls/guides/guides.mdx).
 - For full details on how Teleport populates the `internal` and `external`
   traits we illustrated in this guide, see the [Access
-  Controls Reference](../../reference/access-controls/roles.mdx).
-- View access controls [Getting Started](../../admin-guides/access-controls/getting-started.mdx)
-  and other available [guides](../../admin-guides/access-controls/guides/guides.mdx).
+  Controls Reference](../../../reference/access-controls/roles.mdx).
+- View access controls [Getting Started](../../../admin-guides/access-controls/getting-started.mdx)
+  and other available [guides](../../../admin-guides/access-controls/guides/guides.mdx).
 - Learn about using [JWT tokens](./jwt/introduction.mdx) to implement access
   controls in your application.
 - Integrate with your identity provider:
-  - [OIDC](../../zero-trust-access/sso/oidc.mdx)
-  - [ADFS](../../zero-trust-access/sso/adfs.mdx)
-  - [Microsoft Entra ID](../../zero-trust-access/sso/azuread.mdx)
-  - [Google Workspace](../../zero-trust-access/sso/google-workspace.mdx)
-  - [Onelogin](../../zero-trust-access/sso/one-login.mdx)
-  - [Okta](../../zero-trust-access/sso/okta.mdx)
+  - [OIDC](../../sso/oidc.mdx)
+  - [ADFS](../../sso/adfs.mdx)
+  - [Microsoft Entra ID](../../sso/azuread.mdx)
+  - [Google Workspace](../../sso/google-workspace.mdx)
+  - [Onelogin](../../sso/one-login.mdx)
+  - [Okta](../../sso/okta.mdx)
