--- a/docs/pages/zero-trust-access/enroll-resources/application-access/guides/amazon-athena.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/application-access/guides/amazon-athena.mdx
@@ -163,10 +163,10 @@ Connect to Athena with the ODBC or JDBC driver:
 
   Start DBeaver and add an "Athena" connection. Enter the username (AWS access
   key) and password (AWS secret key) from the `tsh proxy aws` output:
-  ![DBeaver main](../../../../img/application-access/guides/athena-dbeaver-main.png)
+  ![DBeaver main](../../../../../img/application-access/guides/athena-dbeaver-main.png)
 
   Then fill in the `ProxyHost` and `ProxyPort` settings in "Driver properties":
-  ![DBeaver main](../../../../img/application-access/guides/athena-dbeaver-properties.png)
+  ![DBeaver main](../../../../../img/application-access/guides/athena-dbeaver-properties.png)
 
   Click "Finish". Now you can connect to your Athena database.
 
