--- a/docs/pages/zero-trust-access/enroll-resources/application-access/guides/dynamic-registration.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/application-access/guides/dynamic-registration.mdx
@@ -15,9 +15,9 @@ Application Service instances periodically query the Teleport Auth Service for
 Service needs to proxy an application. 
 
 Dynamic registration is useful for [managing pools of Application Service
-instances](../../../zero-trust-access/infrastructure-as-code/terraform-starter/enroll-resources.mdx). And behind the scenes, the
+instances](../../../infrastructure-as-code/terraform-starter/enroll-resources.mdx). And behind the scenes, the
 Teleport Discovery Service uses dynamic registration to [register Kubernetes
-applications](../../auto-discovery/kubernetes-applications/kubernetes-applications.mdx).
+applications](../../../../enroll-resources/auto-discovery/kubernetes-applications/kubernetes-applications.mdx).
 
 ## Required permissions
 
@@ -47,7 +47,7 @@ spec:
   public_addr: test.example.com
 ```
 
-See the full app resource spec [reference](../../../reference/agent-services/application-access.mdx).
+See the full app resource spec [reference](../../../../reference/agent-services/application-access.mdx).
 
 The user creating the dynamic registration needs to have a role with access to the 
 application labels and the `app` resource.  In this example role the user can only
