--- a/docs/pages/zero-trust-access/enroll-resources/application-access/guides/dynamodb.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/application-access/guides/dynamodb.mdx
@@ -17,10 +17,10 @@ This guide will help you to:
 
 <Tabs>
 <TabItem scope={["oss", "enterprise"]} label="Self-Hosted">
-![DynamoDB Self-Hosted](../../../../img/application-access/guides/dynamodb_selfhosted.png)
+![DynamoDB Self-Hosted](../../../../../img/application-access/guides/dynamodb_selfhosted.png)
 </TabItem>
 <TabItem scope={["cloud"]} label="Teleport Enterprise Cloud">
-![DynamoDB Cloud](../../../../img/application-access/guides/dynamodb_cloud.png)
+![DynamoDB Cloud](../../../../../img/application-access/guides/dynamodb_cloud.png)
 </TabItem>
 
 </Tabs>
@@ -31,7 +31,7 @@ The Teleport Application Service enables secure access to DynamoDB via its
 [integration](../cloud-apis/aws-console.mdx) with the AWS management console and
 API. This is an alternative to accessing DynamoDB through the Teleport Database
 service, as described in our [Protect Amazon DynamoDB with
-Teleport](../../database-access/enroll-aws-databases/aws-dynamodb.mdx) guide.
+Teleport](../../../../enroll-resources/database-access/enroll-aws-databases/aws-dynamodb.mdx) guide.
 
 <Admonition type="warning">
 The Application Service's integration with AWS is not designed specifically for
