--- a/docs/pages/zero-trust-access/enroll-resources/application-access/introduction.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/application-access/introduction.mdx
@@ -17,15 +17,15 @@ Examples include:
 - Infrastructure dashboards, such as Kubernetes or Grafana.
 - Developer tools, such as Jenkins, GitLab, or Opsgenie.
 
-![Application access architecture](../../../img/application-access/architecture.png)
+![Application access architecture](../../../../img/application-access/architecture.png)
 
 If you are running applications on Kubernetes, you can [enroll them in your
-Teleport cluster automatically](../auto-discovery/kubernetes-applications/kubernetes-applications.mdx).
+Teleport cluster automatically](../../../enroll-resources/auto-discovery/kubernetes-applications/kubernetes-applications.mdx).
 
 Teleport protects applications through the Teleport Application Service, which
 is a Teleport Agent service. For more information on agent services, read
-[Teleport Agent Architecture](../../reference/architecture/agents.mdx). You can also learn
-how to deploy a [pool of Teleport Agents](../agents/agents.mdx) to run
+[Teleport Agent Architecture](../../../reference/architecture/agents.mdx). You can also learn
+how to deploy a [pool of Teleport Agents](../../../enroll-resources/agents/agents.mdx) to run
 multiple agent services.
 
 ## Getting started
@@ -41,7 +41,7 @@ CLI tools with the same RBAC system you use to protect your infrastructure.
 
 - [AWS Console and CLI Applications](./cloud-apis/aws-console.mdx): How to access
   AWS Management Console, AWS CLI, and AWS SDKs with Teleport.
-- [Google Cloud Web Console](../../admin-guides/access-controls/idps/saml-gcp-workforce-identity-federation.mdx): How to access the Google Cloud web console with Teleport.
+- [Google Cloud Web Console](../../../admin-guides/access-controls/idps/saml-gcp-workforce-identity-federation.mdx): How to access the Google Cloud web console with Teleport.
 - [Google Cloud CLI Applications](./cloud-apis/google-cloud.mdx): How to access
   Google Cloud CLI applications and SDKs with Teleport.
 - [Azure CLI Applications](./cloud-apis/azure.mdx): How to access Azure CLI
