Move the Enroll Servers section of the docs
We are organizing the docs so that top-level sections correspond to
Teleport products. Move the Enroll Servers section into Zero Trust
Access, since the server protection functionality belongs to the
ZTA product.

--- a/docs/pages/core-concepts.mdx
+++ b/docs/pages/core-concepts.mdx
@@ -69,7 +69,7 @@ An SSH server implementation that allows users to execute commands on remote
 machines while taking advantage of Teleport's built-in access controls,
 auditing, and session recording. The SSH service is enabled by default.
 
-Read more about the [Teleport SSH Service](./enroll-resources/server-access/introduction.mdx).
+Read more about the [Teleport SSH Service](zero-trust-access/server-access/introduction.mdx).
 
 ### Teleport Kubernetes Service
 
