--- a/docs/pages/zero-trust-access/server-access/guides/host-user-creation.mdx
+++ b/docs/pages/zero-trust-access/server-access/guides/host-user-creation.mdx
@@ -480,7 +480,7 @@ on the hosts.
 
 ## Next steps
 
-- Configure automatic user provisioning for [database access](../../database-access/auto-user-provisioning/auto-user-provisioning.mdx).
+- Configure automatic user provisioning for [database access](../../../enroll-resources/database-access/auto-user-provisioning/auto-user-provisioning.mdx).
 - Configure automatic user provisioning for [desktop access](../../../reference/agent-services/desktop-access-reference/user-creation.mdx).
 - Configure automatic user provisioning with [Terraform](../../../reference/terraform-provider/resources/role.mdx).
 Note when using the terraform provider that some values may be different than described in this guide.
