Move the Auto Discovery docs section
We are organizing the docs so that top-level sections correspond to
Teleport products. Move the Auto Discovery section into Zero Trust
Access, since this functionality belongs to the ZTA product.

--- a/docs/pages/core-concepts.mdx
+++ b/docs/pages/core-concepts.mdx
@@ -100,7 +100,7 @@ The Teleport Discovery Service automates the process of finding and enrolling cl
 Teleport cluster. It continuously scans supported cloud environments and adds matching resources based on configured rules, 
 reducing the need for manual node registration. 
 
-Read more about the [Teleport Discovery Service](./enroll-resources/auto-discovery/auto-discovery.mdx).
+Read more about the [Teleport Discovery Service](zero-trust-access/enroll-resources/auto-discovery/auto-discovery.mdx).
 
 ### Teleport Desktop Service
 
