--- a/docs/pages/enroll-resources/database-access/enroll-aws-databases/enroll-aws-databases.mdx
+++ b/docs/pages/enroll-resources/database-access/enroll-aws-databases/enroll-aws-databases.mdx
@@ -10,7 +10,7 @@ Teleport.
 
 You can configure Teleport to discover databases in your AWS account and enroll
 them with your cluster automatically. Read more about setting up
-[Database Auto-Discovery](../../auto-discovery/databases/databases.mdx).
+[Database Auto-Discovery](../../../zero-trust-access/enroll-resources/auto-discovery/databases/databases.mdx).
 
 It is also possible to protect databases across your AWS accounts. Read the
 instructions in [AWS Cross-Account Database
