--- a/docs/pages/enroll-resources/database-access/guides/dynamic-registration.mdx
+++ b/docs/pages/enroll-resources/database-access/guides/dynamic-registration.mdx
@@ -130,7 +130,7 @@ $ tctl rm db/example
 ```
 
 Aside from `tctl`, dynamic resources can also be added by:
-- [Auto-Discovery](../../auto-discovery/databases/databases.mdx)
+- [Auto-Discovery](../../../zero-trust-access/enroll-resources/auto-discovery/databases/databases.mdx)
 - [Terraform Provider](../../../zero-trust-access/infrastructure-as-code/terraform-provider/terraform-provider.mdx)
 - [Kubernetes Operator](../../../zero-trust-access/infrastructure-as-code/teleport-operator/teleport-operator.mdx)
 - [Teleport API](../../../admin-guides/api/api.mdx)
