--- a/docs/pages/enroll-resources/kubernetes-access/controls.mdx
+++ b/docs/pages/enroll-resources/kubernetes-access/controls.mdx
@@ -347,7 +347,7 @@ permissions to a service account.
 <Admonition type="tip">
 
 There is usually no need to define these resources manually. The [manual
-methods](register-clusters/register-clusters.mdx) and [automatic methods](../auto-discovery/kubernetes/kubernetes.mdx) for
+methods](register-clusters/register-clusters.mdx) and [automatic methods](../../zero-trust-access/enroll-resources/auto-discovery/kubernetes/kubernetes.mdx) for
 registering Kubernetes clusters with Teleport include steps for setting up the
 Kubernetes RBAC resources that Teleport needs to allow access to clusters.
 
