--- a/docs/pages/enroll-resources/kubernetes-access/faq.mdx
+++ b/docs/pages/enroll-resources/kubernetes-access/faq.mdx
@@ -32,7 +32,7 @@ Since version 11, Teleport can discover your Kubernetes clusters on AWS, GCP,
 and Azure.
 
 Check out the [Kubernetes Service Discovery
-Guide](../auto-discovery/kubernetes/kubernetes.mdx) for more
+Guide](../../zero-trust-access/enroll-resources/auto-discovery/kubernetes/kubernetes.mdx) for more
 documentation and examples.
 
 ## Does Teleport work with Kubernetes desktop UI applications?
