--- a/docs/pages/enroll-resources/kubernetes-access/introduction.mdx
+++ b/docs/pages/enroll-resources/kubernetes-access/introduction.mdx
@@ -27,7 +27,7 @@ commands, and view your `kubectl`  activity in Teleport's audit log:
 
 You can set up the Teleport Discovery Service to protect Kubernetes clusters
 with your Teleport automatically. Read more about [Teleport
-auto-discovery](../auto-discovery/kubernetes/kubernetes.mdx).
+auto-discovery](../../zero-trust-access/enroll-resources/auto-discovery/kubernetes/kubernetes.mdx).
 
 Teleport protects Kubernetes clusters through the Teleport Kubernetes Service,
 which is a Teleport Agent service. For more information on agent services, read
