--- a/docs/pages/zero-trust-access/enroll-resources/application-access/guides/dynamic-registration.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/application-access/guides/dynamic-registration.mdx
@@ -17,7 +17,7 @@ Service needs to proxy an application.
 Dynamic registration is useful for [managing pools of Application Service
 instances](../../../infrastructure-as-code/terraform-starter/enroll-resources.mdx). And behind the scenes, the
 Teleport Discovery Service uses dynamic registration to [register Kubernetes
-applications](../../../../enroll-resources/auto-discovery/kubernetes-applications/kubernetes-applications.mdx).
+applications](../../auto-discovery/kubernetes-applications/kubernetes-applications.mdx).
 
 ## Required permissions
 
