--- a/docs/pages/zero-trust-access/enroll-resources/auto-discovery/databases/aws.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/auto-discovery/databases/aws.mdx
@@ -260,7 +260,7 @@ You can make it match more specific databases by adjusting the label selectors.
 The AWS tags attached to AWS databases are imported as Teleport `db` labels
 in addition to some other identifying metadata.
 Refer to
-[Database Labels Reference](../../../reference/agent-services/database-access-reference/labels.mdx)
+[Database Labels Reference](../../../../reference/agent-services/database-access-reference/labels.mdx)
 for more information about available database labels.
 </Admonition>
 
@@ -295,17 +295,17 @@ Additional Teleport RBAC configuration and possibly IAM configuration may also
 be required to connect to the discovered databases via Teleport.
 
 Refer to the appropriate guide in
-[Enroll AWS Databases](../../database-access/enroll-aws-databases/enroll-aws-databases.mdx)
+[Enroll AWS Databases](../../../../enroll-resources/database-access/enroll-aws-databases/enroll-aws-databases.mdx)
 for information about database user provisioning and configuration.
 </Admonition>
 
 ## Next
-- Learn about [Dynamic Registration](../../database-access/guides/dynamic-registration.mdx) by the
+- Learn about [Dynamic Registration](../../../../enroll-resources/database-access/guides/dynamic-registration.mdx) by the
   Teleport Database Service.
-- Get started by [connecting](../../database-access/guides/guides.mdx) your database.
-- Connect AWS databases in [external AWS accounts](../../database-access/enroll-aws-databases/aws-cross-account.mdx).
+- Get started by [connecting](../../../../enroll-resources/database-access/guides/guides.mdx) your database.
+- Connect AWS databases in [external AWS accounts](../../../../enroll-resources/database-access/enroll-aws-databases/aws-cross-account.mdx).
 - Refer to the appropriate guide in
-[Enroll AWS Databases](../../database-access/enroll-aws-databases/enroll-aws-databases.mdx)
+[Enroll AWS Databases](../../../../enroll-resources/database-access/enroll-aws-databases/enroll-aws-databases.mdx)
 for information about database user provisioning and configuration.
 
 ## Troubleshooting
