--- a/docs/pages/zero-trust-access/infrastructure-as-code/terraform-starter/enroll-resources.mdx
+++ b/docs/pages/zero-trust-access/infrastructure-as-code/terraform-starter/enroll-resources.mdx
@@ -590,7 +590,7 @@ To configure the Teleport Discovery Service:
 
 1. Edit the userdata script run by the Agent instances managed in the Terraform
    starter module. Follow the [Auto-Discovery
-   guides](../../../enroll-resources/auto-discovery/auto-discovery.mdx) guides
+   guides](../../enroll-resources/auto-discovery/auto-discovery.mdx) guides
    to configure the Discovery Service and enable your Agents to proxy the
    resources that the service enrolls.
 1. Add the `Discovery` role to the join token resource you created earlier. In
@@ -598,7 +598,7 @@ To configure the Teleport Discovery Service:
 1. Add roles to the join token resource that corresponds to the Agent services
    you want to proxy discovered resources. The roles to add depend on the
    resources you want to automatically enroll based on the [Auto-Discovery
-   guides](../../../enroll-resources/auto-discovery/auto-discovery.mdx) guides.
+   guides](../../enroll-resources/auto-discovery/auto-discovery.mdx) guides.
 
 ### Enroll resources manually
 
