--- a/docs/pages/enroll-resources/kubernetes-access/getting-started.mdx
+++ b/docs/pages/enroll-resources/kubernetes-access/getting-started.mdx
@@ -201,7 +201,7 @@ This guide demonstrated how to enroll a Kubernetes cluster by running the
 Teleport Kubernetes Service within the Kubernetes cluster. 
 
 - For information about discovering Kubernetes clusters hosted on cloud providers, see 
-[Kubernetes Cluster Discovery](../auto-discovery/kubernetes/kubernetes.mdx). 
+[Kubernetes Cluster Discovery](../../zero-trust-access/enroll-resources/auto-discovery/kubernetes/kubernetes.mdx). 
 - To learn about other ways you can register a Kubernetes cluster with Teleport, see 
 [Registering Kubernetes Clusters with Teleport](register-clusters/register-clusters.mdx).
 - For a complete list of the parameters you can configure in the `teleport-kube-agent` 
