--- a/docs/pages/zero-trust-access/enroll-resources/application-access/introduction.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/application-access/introduction.mdx
@@ -20,7 +20,7 @@ Examples include:
 ![Application access architecture](../../../../img/application-access/architecture.png)
 
 If you are running applications on Kubernetes, you can [enroll them in your
-Teleport cluster automatically](../../../enroll-resources/auto-discovery/kubernetes-applications/kubernetes-applications.mdx).
+Teleport cluster automatically](../auto-discovery/kubernetes-applications/kubernetes-applications.mdx).
 
 Teleport protects applications through the Teleport Application Service, which
 is a Teleport Agent service. For more information on agent services, read
