--- a/docs/pages/zero-trust-access/enroll-resources/auto-discovery/auto-discovery.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/auto-discovery/auto-discovery.mdx
@@ -12,7 +12,7 @@ these resources with no further configuration. This lets you decouple the need
 to protect your infrastructure resources from the work of deploying and managing
 them.
 
-The Discovery Service runs on [Teleport Agents](../agents/agents.mdx). It
+The Discovery Service runs on [Teleport Agents](../../../enroll-resources/agents/agents.mdx). It
 periodically queries cloud provider APIs to list resources in your
 infrastructure. It then reconciles these resources with Teleport resources
 registered on the Auth Service backend.
