--- a/docs/pages/zero-trust-access/enroll-resources/auto-discovery/kubernetes-applications/get-started.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/auto-discovery/kubernetes-applications/get-started.mdx
@@ -115,6 +115,6 @@ For the Application Service, make sure that labels in `resources` field are defi
 
 You can configure the scope of the Discovery Service. For more information, see
 [`teleport-kube-agent` helm chart
-documentation](../../../reference/helm-reference/teleport-kube-agent.mdx).
+documentation](../../../../reference/helm-reference/teleport-kube-agent.mdx).
 
 
