--- a/docs/pages/zero-trust-access/enroll-resources/auto-discovery/kubernetes-applications/kubernetes-applications.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/auto-discovery/kubernetes-applications/kubernetes-applications.mdx
@@ -20,8 +20,8 @@ traffic to them.
 
 - [Get started](./get-started.mdx): Set up automatic
   application discovery with the `teleport-kube-agent` Helm chart.
-- [Architecture](../../../reference/architecture/kubernetes-applications-architecture.mdx): Learn how
+- [Architecture](../../../../reference/architecture/kubernetes-applications-architecture.mdx): Learn how
   automatic application discovery works.
-- [Reference](../../../reference/agent-services/auto-discovery-reference/kubernetes-application-discovery.mdx): Consult this guide
+- [Reference](../../../../reference/agent-services/auto-discovery-reference/kubernetes-application-discovery.mdx): Consult this guide
   for options and Kubernetes annotations you can use to configure automatic
   Kubernetes application discovery.
