--- a/docs/pages/zero-trust-access/enroll-resources/auto-discovery/servers/gcp-discovery.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/auto-discovery/servers/gcp-discovery.mdx
@@ -85,7 +85,7 @@ discover instances.
   - `iam.serviceAccounts.get`
   - `iam.serviceAccounts.list`
 
-  ![Custom role](../../../../img/server-access/guides/gcp/custom-role@2x.png)
+  ![Custom role](../../../../../img/server-access/guides/gcp/custom-role@2x.png)
 
   Click *Create*.
 
@@ -94,19 +94,19 @@ discover instances.
   (e.g. `teleport-discovery`) and copy its email address to your clipboard.
   Click *Create and Continue*.
 
-  ![Service account](../../../../img/server-access/guides/gcp/create-service-account@2x.png)
+  ![Service account](../../../../../img/server-access/guides/gcp/create-service-account@2x.png)
 
   Go to [IAM](https://console.cloud.google.com/iam-admin/iam) and click *Grant Access*.
   Paste the service account's email into the *New principals* field and select
   your custom role. Click *Save*.
 
-  ![Role assignment](../../../../img/server-access/guides/gcp/assign-role-to-service-account@2x.png)
+  ![Role assignment](../../../../../img/server-access/guides/gcp/assign-role-to-service-account@2x.png)
 
   If the Discovery Service will run in a GCP compute instance, edit the instance and
   assign the service account to the instance and set its access scopes to include 
   Read Write access to the Compute API.
 
-  ![Service account assignment](../../../../img/server-access/guides/gcp/access-scopes@2x.png)
+  ![Service account assignment](../../../../../img/server-access/guides/gcp/access-scopes@2x.png)
 </TabItem>
 <TabItem label="gcloud">
   Copy the following and paste it into a file called `teleport-discovery-role.yaml`:
@@ -299,7 +299,7 @@ for details on alternate methods.
 
 ## Next steps
 
-- Read [Joining Services via GCP](../../agents/gcp.mdx)
+- Read [Joining Services via GCP](../../../../enroll-resources/agents/gcp.mdx)
   for more information on GCP tokens.
 - Full documentation on GCP discovery configuration can be found through the [
-  config file reference documentation](../../../reference/config.mdx).
+  config file reference documentation](../../../../reference/config.mdx).
