Move the Agents docs section
We are organizing the docs so that top-level sections correspond to
Teleport products. Move the Agents section into Zero Trust Access, since
this functionality belongs to the ZTA product.

--- a/docs/pages/zero-trust-access/enroll-resources/agents/agents.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/agents/agents.mdx
@@ -17,13 +17,13 @@ several **join methods**. When joining an Agent, you can configure the services
 that run on the agent. You can also edit the configuration of an Agent to change
 the services that run on it.
 
-![Diagram showing the architecture of an Agent pool](../../../img/agent-pool-diagram.png)
+![Diagram showing the architecture of an Agent pool](../../../../img/agent-pool-diagram.png)
 
 Read our guide for how to use Terraform to [deploy a pool of
-Agents](../../zero-trust-access/infrastructure-as-code/terraform-starter/enroll-resources.mdx). 
+Agents](../../infrastructure-as-code/terraform-starter/enroll-resources.mdx). 
 
 For more information on the architecture of Teleport Agents, read
-[Teleport Agent Architecture](../../reference/architecture/agents.mdx).
+[Teleport Agent Architecture](../../../reference/architecture/agents.mdx).
 
 When a Teleport process first runs, it checks its configuration file to
 determine which services are enabled. Each service then connects separately to
