--- a/docs/pages/zero-trust-access/enroll-resources/agents/join-token.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/agents/join-token.mdx
@@ -217,7 +217,7 @@ Copy the CA pin and assign it to the value of <Var name="ca-pin" />.
 <Admonition type="warning">
 
 The CA pin becomes invalid if a Teleport administrator performs the CA rotation
-by executing [`tctl auth rotate`](../../reference/cli/tctl.mdx#tctl-auth-rotate).
+by executing [`tctl auth rotate`](../../../reference/cli/tctl.mdx#tctl-auth-rotate).
 
 </Admonition>
 
@@ -332,4 +332,4 @@ $ tctl tokens rm <Var name="token-to-delete"/>
 ## Next steps
 
 - If you have workloads split across different networks or clouds, we recommend
-  setting up trusted clusters. Read how to get started in [Configure Trusted Clusters](../../admin-guides/management/admin/trustedclusters.mdx).
+  setting up trusted clusters. Read how to get started in [Configure Trusted Clusters](../../../admin-guides/management/admin/trustedclusters.mdx).
