--- a/docs/pages/zero-trust-access/enroll-resources/agents/oracle.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/agents/oracle.mdx
@@ -61,7 +61,7 @@ in:
 Any {instance.compartment.id = '<Var name="compartment-id" />'}
 ```
 
-![Create dynamic group](../../../img/oracle/oracle-join-dynamic-group@2x.png)
+![Create dynamic group](../../../../img/oracle/oracle-join-dynamic-group@2x.png)
 
 <Admonition type="tip">
 
@@ -81,7 +81,7 @@ Click **Create Policy**. Create the following policy, assigning
 Allow dynamic-group '<Var name="identity-domain" />'/'join-teleport' to inspect authentication in tenancy
 ```
 
-![Create policy](../../../img/oracle/oracle-join-policy@2x.png)
+![Create policy](../../../../img/oracle/oracle-join-policy@2x.png)
 
 ## Step 3/5. Install Teleport
 
