--- a/docs/pages/zero-trust-access/enroll-resources/auto-discovery/servers/azure-discovery.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/auto-discovery/servers/azure-discovery.mdx
@@ -309,7 +309,7 @@ logs can be found on the targeted VM at
 
 ## Next steps
 
-- Read [Joining Nodes via Azure Managed Identity](../../../../enroll-resources/agents/azure.mdx)
+- Read [Joining Nodes via Azure Managed Identity](../../agents/azure.mdx)
   for more information on Azure tokens.
 - Full documentation on Azure discovery configuration can be found through the [
   config file reference documentation](../../../../reference/config.mdx).
