--- a/docs/pages/enroll-resources/kubernetes-access/introduction.mdx
+++ b/docs/pages/enroll-resources/kubernetes-access/introduction.mdx
@@ -32,7 +32,7 @@ auto-discovery](../../zero-trust-access/enroll-resources/auto-discovery/kubernet
 Teleport protects Kubernetes clusters through the Teleport Kubernetes Service,
 which is a Teleport Agent service. For more information on agent services, read
 [Teleport Agent Architecture](../../reference/architecture/agents.mdx). You can also learn
-how to deploy a [pool of Teleport Agents](../agents/agents.mdx) to run
+how to deploy a [pool of Teleport Agents](../../zero-trust-access/enroll-resources/agents/agents.mdx) to run
 multiple agent services.
 
 ## Get started
