--- a/docs/pages/zero-trust-access/enroll-resources/agents/add-service-to-agent.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/agents/add-service-to-agent.mdx
@@ -66,7 +66,7 @@ Service:
 ```
 
 See the `teleport-kube-agent` [chart
-reference](../../reference/helm-reference/teleport-kube-agent.mdx#roles) for the
+reference](../../../reference/helm-reference/teleport-kube-agent.mdx#roles) for the
 roles and token types that the chart supports.
 
 ## Step 2/3. Edit your agent configuration
@@ -252,18 +252,18 @@ While this guide shows you how to create a token using `tctl`, you can also
 manage tokens using the Teleport Terraform provider or Kubernetes operator. See
 the following documentation for information on the token resource:
 - [Terraform
-  provider](../../reference/terraform-provider/resources/provision_token.mdx)
+  provider](../../../reference/terraform-provider/resources/provision_token.mdx)
 - [Kubernetes
-  operator](../../reference/operator-resources/resources-teleport-dev-provisiontokens.mdx)
+  operator](../../../reference/operator-resources/resources-teleport-dev-provisiontokens.mdx)
 
 You can set up a system to automate the process of assigning join tokens to
 agents, ensuring that all Teleport services you run have the correct join
 token permissions. Here are examples in the documentation:
 - [Enroll Infrastructure with
-  Terraform](../../zero-trust-access/infrastructure-as-code/terraform-starter/enroll-resources.mdx):
+  Terraform](../../infrastructure-as-code/terraform-starter/enroll-resources.mdx):
   Using Terraform to launch Teleport Agent instances that depend on join token
   resources.
 - [Automatically Register Resources with
-  Teleport](../../admin-guides/api/automatically-register-agents.mdx): Writing a
+  Teleport](../../../admin-guides/api/automatically-register-agents.mdx): Writing a
   compute platform client that automatically creates join tokens and launches
   Teleport Agents with them.
