--- a/docs/pages/zero-trust-access/enroll-resources/auto-discovery/servers/gcp-discovery.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/auto-discovery/servers/gcp-discovery.mdx
@@ -299,7 +299,7 @@ for details on alternate methods.
 
 ## Next steps
 
-- Read [Joining Services via GCP](../../../../enroll-resources/agents/gcp.mdx)
+- Read [Joining Services via GCP](../../agents/gcp.mdx)
   for more information on GCP tokens.
 - Full documentation on GCP discovery configuration can be found through the [
   config file reference documentation](../../../../reference/config.mdx).
