--- a/docs/pages/zero-trust-access/infrastructure-as-code/managing-resources/trusted-cluster.mdx
+++ b/docs/pages/zero-trust-access/infrastructure-as-code/managing-resources/trusted-cluster.mdx
@@ -34,7 +34,7 @@ Teleport supports three ways to dynamically create resources from code:
 
 - A Teleport SSH server that is joined to the cluster you plan to use as the **leaf cluster**.
   For information about how to enroll a resource in your cluster, see
-  [Join Services to your Cluster](../../../enroll-resources/agents/agents.mdx).
+  [Join Services to your Cluster](../../enroll-resources/agents/agents.mdx).
 
 - Read through the [Configure Trusted Clusters](../../../admin-guides/management/admin/trustedclusters.mdx)
   guide to understand how trusted clusters works.
