Move the Enroll Kubernetes Clusters docs section
We are organizing the docs so that top-level sections correspond to
Teleport products. Move the Enroll Kubernetes Clusters section into Zero
Trust Access, since this functionality belongs to the ZTA product.

--- a/docs/pages/core-concepts.mdx
+++ b/docs/pages/core-concepts.mdx
@@ -76,7 +76,7 @@ Read more about the [Teleport SSH Service](zero-trust-access/server-access/intro
 Proxies HTTP traffic to the Kubernetes API server. Use for Access control and session tracking for Kubernetes.
 
 Read more about the [Teleport Kubernetes
-Service](./enroll-resources/kubernetes-access/introduction.mdx)
+Service](zero-trust-access/enroll-resources/kubernetes-access/introduction.mdx)
 
 ### Teleport Application Service
 
