--- a/docs/pages/zero-trust-access/enroll-resources/kubernetes-access/getting-started.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/kubernetes-access/getting-started.mdx
@@ -18,7 +18,7 @@ on Kubernetes and enrolls the Kubernetes cluster automatically. The following
 diagram provides a simplified overview of this deployment scenario with the
 Teleport Kubernetes Service running on the Kubernetes cluster:
 
-![Enroll a Kubernetes cluster](../../../img/k8s/enroll-kubernetes.png)
+![Enroll a Kubernetes cluster](../../../../img/k8s/enroll-kubernetes.png)
 
 For information about other ways to enroll and discover Kubernetes clusters, see
 [Registering Kubernetes Clusters with Teleport](register-clusters/register-clusters.mdx).
@@ -201,8 +201,8 @@ This guide demonstrated how to enroll a Kubernetes cluster by running the
 Teleport Kubernetes Service within the Kubernetes cluster. 
 
 - For information about discovering Kubernetes clusters hosted on cloud providers, see 
-[Kubernetes Cluster Discovery](../../zero-trust-access/enroll-resources/auto-discovery/kubernetes/kubernetes.mdx). 
+[Kubernetes Cluster Discovery](../auto-discovery/kubernetes/kubernetes.mdx). 
 - To learn about other ways you can register a Kubernetes cluster with Teleport, see 
 [Registering Kubernetes Clusters with Teleport](register-clusters/register-clusters.mdx).
 - For a complete list of the parameters you can configure in the `teleport-kube-agent` 
-helm chart, see the [Chart Reference](../../reference/helm-reference/teleport-kube-agent.mdx).
+helm chart, see the [Chart Reference](../../../reference/helm-reference/teleport-kube-agent.mdx).
