--- a/docs/pages/zero-trust-access/enroll-resources/kubernetes-access/register-clusters/iam-joining.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/kubernetes-access/register-clusters/iam-joining.mdx
@@ -307,5 +307,5 @@ For both cases, please refer to the section below.
 
 To see all of the options you can set in the values file for the
 `teleport-kube-agent` Helm chart, consult our [reference
-guide](../../../reference/helm-reference/teleport-kube-agent.mdx).
+guide](../../../../reference/helm-reference/teleport-kube-agent.mdx).
 
