--- a/docs/pages/zero-trust-access/infrastructure-as-code/terraform-starter/enroll-resources.mdx
+++ b/docs/pages/zero-trust-access/infrastructure-as-code/terraform-starter/enroll-resources.mdx
@@ -610,7 +610,7 @@ the documentation section for each kind of resource you would like to enroll:
 - [Windows
   desktops](../../../enroll-resources/desktop-access/desktop-access.mdx)
 - [Kubernetes
-  clusters](../../../enroll-resources/kubernetes-access/kubernetes-access.mdx)
+  clusters](../../enroll-resources/kubernetes-access/kubernetes-access.mdx)
 - [Linux servers](../../server-access/server-access.mdx)
 - [Web applications and cloud provider
   APIs](../../enroll-resources/application-access/application-access.mdx)
