--- a/docs/pages/zero-trust-access/enroll-resources/kubernetes-access/controls.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/kubernetes-access/controls.mdx
@@ -210,7 +210,7 @@ headers](https://kubernetes.io/docs/reference/access-authn-authz/authentication/
 to send requests to the API server with one Kubernetes user and zero or more
 Kubernetes groups.
 
-![Impersonation](../../../img/k8s/auth.png)
+![Impersonation](../../../../img/k8s/auth.png)
 
 The `kubernetes_users` and `kubernetes_groups` fields indicate which users and
 groups to allow a user to assume when they send requests to a Kubernetes API
@@ -347,7 +347,7 @@ permissions to a service account.
 <Admonition type="tip">
 
 There is usually no need to define these resources manually. The [manual
-methods](register-clusters/register-clusters.mdx) and [automatic methods](../../zero-trust-access/enroll-resources/auto-discovery/kubernetes/kubernetes.mdx) for
+methods](register-clusters/register-clusters.mdx) and [automatic methods](../auto-discovery/kubernetes/kubernetes.mdx) for
 registering Kubernetes clusters with Teleport include steps for setting up the
 Kubernetes RBAC resources that Teleport needs to allow access to clusters.
 
@@ -403,7 +403,7 @@ will populate them with information from each authenticating user.
 
 For more information on how template variable expansion works in Teleport roles,
 see the [Access Controls
-Reference](../../reference/access-controls/roles.mdx).
+Reference](../../../reference/access-controls/roles.mdx).
 
 ##### Single Sign-On provider traits
 
