--- a/docs/pages/zero-trust-access/enroll-resources/kubernetes-access/manage-access.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/kubernetes-access/manage-access.mdx
@@ -455,8 +455,8 @@ RBAC configurations.
 
 Now that you know how to configure Teleport's RBAC system to control access to
 Kubernetes clusters, learn how to set up [Resource Access
-Requests](../../identity-governance/access-requests/resource-requests.mdx)
+Requests](../../../identity-governance/access-requests/resource-requests.mdx)
 for just-in-time access and [Access Request
-plugins](../../identity-governance/access-request-plugins/access-request-plugins.mdx) so you can manage
+plugins](../../../identity-governance/access-request-plugins/access-request-plugins.mdx) so you can manage
 access with your communication workflow of choice.
 
