--- a/docs/pages/zero-trust-access/enroll-resources/kubernetes-access/register-clusters/register-clusters.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/kubernetes-access/register-clusters/register-clusters.mdx
@@ -8,7 +8,7 @@ labels:
 
 In some cases, you will want to register a Kubernetes cluster with Teleport
 manually, rather than letting Teleport [discover the cluster
-automatically](../../../zero-trust-access/enroll-resources/auto-discovery/kubernetes/kubernetes.mdx). There are a few ways to do
+automatically](../../auto-discovery/kubernetes/kubernetes.mdx). There are a few ways to do
 this:
 
 - [Deploy the Teleport Kubernetes
